syntax = "proto3";
package protobuf.http;
message BoxErrorS{
	string hOpCode=1;
	BoxErrorCode errorCode=2;
	string errorHOpCode=3;
	string extraMsg=4;
}
enum BoxErrorCode{
	ERROR_CODE_0=0;//未知错误
	ERROR_CODE_1=1;//不存在这个用户
	ERROR_CODE_2=2;//创建用户顶级文件夹失败
	ERROR_CODE_3=3;//md5校验失败
	ERROR_CODE_4=4;//上传失败，不存在这个文件
	ERROR_CODE_5=5;//上传失败，上传位置不对
	ERROR_CODE_6=6;//上传失败，长度不对
	ERROR_CODE_7=7;//上传失败，没发送文件
	ERROR_CODE_8=8;//上传失败，不存在实体文件
	ERROR_CODE_9=9;//上传失败，时间超前
	ERROR_CODE_10=10;//上传失败，更换基础文件失败
	ERROR_CODE_11=11;//上传失败，写入文件失败
	ERROR_CODE_12=12;//上传失败，更新数据失败
}